<resources>
    <string name="app_name">NMedia</string>
    <string name="description_post_author_avatar">Post author avatar</string>
    <string name="description_post_menu">Post menu</string>
    <string name="description_post_likes">Number of likes</string>
    <string name="description_post_shares">Number of shares</string>
    <string name="description_post_views">Number of views</string>
    <string name="description_post_remove">Remove post</string>
    <string name="description_post_hint">Enter the text of your post</string>
    <string name="description_post_save_button">Save</string>
    <string name="description_post_cancel_button">Cancel editing</string>
    <string name="description_post_empty_post">Post cannot be empty, write something</string>
    <string name="description_post_edit">Edit post</string>
    <string name="chooser_share_post">Share post</string>
    <string name="error_empty_content">No content available</string>
    <string name="add_bar">ADD</string>
    <string name="video_play_button">PLAY</string>
    <string name="channel_remote_name">Server notifications</string>
    <string name="channel_remote_description">Notifications from remote server</string>
    <string name="notification_user_liked">User %1$s liked %2$s\'s post</string>
    <string name="notification_user_new_post">User %1$s published new post</string>
</resources>