<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/indent"
    tools:context=".MainActivity"
    tools:ignore="ExtraText">

    <ImageView
        android:id="@+id/avatar"
        android:layout_width="@dimen/avatar_size"
        android:layout_height="@dimen/avatar_size"
        android:contentDescription="@string/description_post_author_avatar"
        android:src="@drawable/ic_netology_48dp"
        app:layout_constraintBottom_toBottomOf="@id/barrierTop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/author"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/indent"
        android:ellipsize="end"
        android:singleLine="true"
        app:layout_constraintBottom_toTopOf="@id/published"
        app:layout_constraintEnd_toStartOf="@id/menu"
        app:layout_constraintStart_toEndOf="@id/avatar"
        app:layout_constraintTop_toTopOf="@id/avatar"
        app:layout_constraintVertical_chainStyle="packed"
        tools:text="Нетология. Университет интернет-профессий будущего"/>

    <TextView
        android:id="@+id/published"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/indent"
        app:layout_constraintBottom_toBottomOf="@id/avatar"
        app:layout_constraintStart_toEndOf="@id/avatar"
        app:layout_constraintTop_toBottomOf="@id/author"
        tools:text="21 мая в 18:36"/>

    <ImageButton
        android:id="@+id/menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:contentDescription="@string/description_post_menu"
        android:src="@drawable/ic_baseline_more_vert_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrierTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="avatar,published,menu" />

    <TextView
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/indent"
        app:layout_constraintTop_toBottomOf="@id/barrierTop"
        tools:text="Привет, это новая Нетология! Когда-то Нетология начиналась с интенсивов по онлайн-маркетингу. Затем появились курсы по дизайну, разработке, аналитике и управлению. Мы растём сами и помогаем расти студентам: от новичков до уверенных профессионалов. Но самое важное остаётся с нами: мы верим, что в каждом уже есть сила, которая заставляет хотеть больше, целиться выше, бежать быстрее. Наша миссия — помочь встать на путь роста и начать цепочку перемен → http://netolo.gy/fyb" />/>

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrierBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="content" />

    <ImageButton
        android:id="@+id/likeSign"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/description_post_likes"
        android:src="@drawable/ic_baseline_favorite_border_24"
        app:layout_constraintTop_toBottomOf="@id/barrierBottom"
        app:layout_constraintStart_toStartOf="@id/content"
        tools:layout_editor_absoluteX="16dp" />

    <TextView
        android:id="@+id/likesNumberFigure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/barrierBottom"
        app:layout_constraintStart_toEndOf="@id/likeSign"
        android:background="@android:color/transparent"
        />

    <ImageButton
        android:id="@+id/shareSign"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/description_post_shares"
        android:src="@drawable/ic_baseline_share_24"
        app:layout_constraintTop_toBottomOf="@id/barrierBottom"
        app:layout_constraintStart_toEndOf="@id/likesNumberFigure"
        tools:layout_editor_absoluteX="16dp" />

    <TextView
        android:id="@+id/sharesNumberFigure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/barrierBottom"
        app:layout_constraintStart_toEndOf="@id/shareSign"
        android:background="@android:color/transparent"
        />

    <ImageButton
        android:id="@+id/viewsNumberSign"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="5dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/description_post_views"
        android:src="@drawable/ic_baseline_remove_red_eye_24"
        app:layout_constraintTop_toBottomOf="@id/barrierBottom"
        app:layout_constraintEnd_toStartOf="@id/viewsNumberFigure"
        tools:layout_editor_absoluteX="16dp" />

    <TextView
        android:id="@+id/viewsNumberFigure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/barrierBottom"
        app:layout_constraintEnd_toEndOf="@id/content"
        android:background="@android:color/transparent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>